--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750444141/krotorower_uyslkq.png" alt="Krotoszyńska Odznaka Krajoznawcza dla Kolarzy">
                 <span>Krotoszyńska Odznaka Krajoznawcza dla Kolarzy</span>
             </a>
+            <a href="20250622_karty.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750880191/kartylogo_xlku4l.png" alt="Karty">
+                <span>Karty Piłkarskie</span>
+            </a>
+            <a href="20250625_fifa.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750880881/fifalogo_ewpv6l.png" alt="Turniej Fifa">
+                <span>Turniej Fifa</span>
+            </a>
+            <a href="inne.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750881328/inne_cqv03n.png" alt="Inne">
+                <span>Inne</span>
+            </a>
         </div>
     </div>
     <script src="script.js"></script>
